RESOLVED FIXED174717
iBooks: Overlapping/missing content at beginning/end of paragraph.
https://bugs.webkit.org/show_bug.cgi?id=174717
Summary iBooks: Overlapping/missing content at beginning/end of paragraph.
alan
Reported 2017-07-21 10:48:49 PDT
rdar://problem/33117912 It happens when simple and normal line layout don't agree on line breaking.
Attachments
Patch (1.89 KB, patch)
2017-07-21 11:00 PDT, alan
no flags
alan
Comment 1 2017-07-21 11:00:24 PDT
WebKit Commit Bot
Comment 2 2017-07-21 14:04:46 PDT
Comment on attachment 316103 [details] Patch Clearing flags on attachment: 316103 Committed r219742: <http://trac.webkit.org/changeset/219742>
WebKit Commit Bot
Comment 3 2017-07-21 14:04:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.