iBooks: Overlapping/missing content at beginning/end of paragraph. https://bugs.webkit.org/show_bug.cgi?id=174717 <rdar://problem/33117912>

Reviewed by Simon Fraser.

By definiton simple and normal line layout should always produce the exact same lineboxes. It enables us not
to force repaint while swapping between these 2 line layouts.
However in certain cases (font size pixel rounding as an example) they don't agree on how much content fits the line and
that could result in missing/overlapping content due to the lack of repaint.

Unable to test.

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::ensureLineBoxes):


Canonical link: https://commits.webkit.org/191551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219742 268f45cc-cd09-0410-ab3c-d52691b4dbfc